[package]
name = "degame"
version = "0.1.0"
edition = "2021"
description = "A decentralized card game contract using Switchboard VRF"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = [] 
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Anchor dependencies
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Random number generation
rand = "0.8.5"

# Serialization
bincode = "1.3.3"

# Solana program utilities
solana-program = "1.14.13"

# Switchboard VRF
switchboard-solana = "0.30.4"

[patch.crates-io]
time = { version = "=0.3.35" } # Fixes any inference errors related to the `time` crate
